samples/_failures_safe/1761512944_4d4460_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_aafcd427.c: In function ‘main’:
./samples/SAFE/__tmp_aafcd427.c:182:5: error: expected declaration or statement at end of input
  182 |     if (!fgets(input, sizeof(input), stdin)) {
      |     ^~
./samples/SAFE/__tmp_aafcd427.c:182:5: error: expected declaration or statement at end of input
